implementation task repository fixed database fixed di

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidxHiltNavigationCompose = "1.0.0"
 nav-version = "2.7.6"
 hilt = "2.48.1"
 room = "2.6.1"
+ksp = "1.9.21-1.0.15"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -32,6 +33,7 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
 androidx-room = { group = "androidx.room", name="room-runtime", version.ref="room" }
 androidx-compiler = { group = "androidx.room", name="room-compiler", version.ref="room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 hilt-android-core = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 
@@ -40,6 +42,5 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", v
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-
-
